#
# Copyright (c) 2026 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

# This plugin is kept separate from the main workspace for now
[workspace]

[package]
name = "zenoh-plugin-sequence-detector"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
license = "EPL-2.0 OR Apache-2.0"
repository = "https://github.com/eclipse-zenoh/zenoh"
publish = false

[features]
default = ["dynamic_plugin"]
dynamic_plugin = []

[lib]
# When auto-detecting the "sequence-detector" plugin, `zenohd` will look for a dynamic library named "zenoh_plugin_sequence_detector"
# `zenohd` will expect the file to be named according to OS conventions:
#   - libzenoh_plugin_sequence_detector.so on linux
#   - libzenoh_plugin_sequence_detector.dylib on macOS
#   - zenoh_plugin_sequence_detector.dll on Windows
name = "zenoh_plugin_sequence_detector"
# This crate type will make `cargo` output a dynamic library instead of a rust static library
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
git-version = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
zenoh = { path = "../../zenoh", features = [
  "default",
  "internal",
  "plugins",
  "unstable",
] }
zenoh-plugin-trait = { path = "../zenoh-plugin-trait" }
zenoh-util = { path = "../../commons/zenoh-util" }

[package.metadata.cargo-machete]
ignored = ["git-version"]
